--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   
   
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br>
+    Coded by <a href="https://linktr.ee/glenwarrangal" target="_blank">Glen Clarence</a>.
+  </div>
 </body>
 </html>
